@@ -357,14 +357,6 @@ bld.SAMBA3_MODULE('vfs_aio_pthread',
                  internal_module=bld.SAMBA3_IS_STATIC_MODULE('vfs_aio_pthread'),
                  enabled=bld.SAMBA3_IS_ENABLED_MODULE('vfs_aio_pthread'))
 
-bld.SAMBA3_MODULE('vfs_aio_linux',
-                 subsystem='vfs',
-                 source='vfs_aio_linux.c',
-                 deps='samba-util aio',
-                 init_function='',
-                 internal_module=bld.SAMBA3_IS_STATIC_MODULE('vfs_aio_linux'),
-                 enabled=bld.SAMBA3_IS_ENABLED_MODULE('vfs_aio_linux'))
-
 bld.SAMBA3_MODULE('vfs_preopen',
                  subsystem='vfs',
                  source='vfs_preopen.c',
